// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dashboard > renders dashboard with tasks after loading (snapshot) 1`] = `
<DocumentFragment>
  <div
    class="min-h-screen bg-gray-100"
  >
    <header
      class="bg-white shadow"
    >
      <div
        class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center"
      >
        <h1
          class="text-xl font-bold text-gray-800"
        >
          Family Todo App
        </h1>
        <div
          class="flex items-center gap-4"
        >
          <span
            class="text-gray-600"
          >
            Hello, Test User
          </span>
          <button
            class="px-3 py-1 text-sm text-gray-600 hover:text-gray-800"
          >
            Logout
          </button>
          <button
            class="px-3 py-1 text-sm bg-gray-100 text-gray-700 rounded border hover:bg-gray-200 transition-colors flex items-center gap-1"
            title="Refresh data"
          >
            🔄 Reload
          </button>
        </div>
      </div>
    </header>
    <main
      class="max-w-7xl mx-auto px-4 py-6"
    >
      <div
        class="mb-6 flex flex-wrap gap-6 items-center justify-between"
      >
        <div
          class="flex flex-wrap gap-6"
        >
          <div
            class="flex flex-col gap-2"
          >
            <span
              class="text-sm font-semibold text-gray-500 uppercase tracking-wider"
            >
              Status
            </span>
            <div
              class="flex gap-2"
            >
              <button
                class="px-3 py-1.5 text-sm rounded transition-colors bg-blue-600 text-white"
              >
                Open
              </button>
              <button
                class="px-3 py-1.5 text-sm rounded transition-colors bg-white text-gray-700 border hover:bg-gray-50"
              >
                Completed
              </button>
                              
              <button
                class="px-3 py-1.5 text-sm rounded transition-colors bg-white text-gray-700 border hover:bg-gray-50"
              >
                All
              </button>
            </div>
          </div>
          <div
            class="flex flex-col gap-2"
          >
            <span
              class="text-sm font-semibold text-gray-500 uppercase tracking-wider"
            >
              Assignee
            </span>
            <div
              class="flex gap-2"
            >
              <button
                class="px-3 py-1.5 text-sm rounded transition-colors bg-white text-gray-700 border hover:bg-gray-50"
              >
                My Tasks
              </button>
              <button
                class="px-3 py-1.5 text-sm rounded transition-colors bg-blue-600 text-white"
              >
                All Tasks
              </button>
            </div>
          </div>
        </div>
        <div
          class="flex gap-4 items-center"
        >
          <select
            class="px-3 py-2 border rounded bg-white text-sm"
          >
            <option
              value="createdAt"
            >
              Sort by Created
            </option>
            <option
              value="dueDate"
            >
              Sort by Due Date
            </option>
            <option
              value="title"
            >
              Sort by Title
            </option>
          </select>
          <button
            class="px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600 text-sm font-medium"
          >
            + New Task
          </button>
        </div>
      </div>
      <div
        class="space-y-2"
      >
        <div
          class="p-4 border rounded-lg mb-2 bg-white border-gray-200"
        >
          <div
            class="flex items-stretch justify-between"
          >
            <div
              class="flex-1 flex flex-col"
            >
              <div>
                <h3
                  class="font-semibold text-lg text-gray-800"
                >
                  Task 1
                </h3>
                <p
                  class="text-gray-600 mt-1"
                >
                  Desc 1
                </p>
              </div>
              <div
                class="flex gap-4 mt-auto pt-2 text-sm text-gray-500"
              >
                <span
                  class="px-2 py-0.5 rounded bg-blue-100 text-blue-800"
                >
                  Test User
                </span>
                <span
                  class="text-gray-400 ml-1"
                >
                  (#1)
                </span>
              </div>
            </div>
            <div
              class="flex flex-col gap-2 ml-4"
            >
              <button
                class="px-3 py-1 bg-green-500 text-white rounded hover:bg-green-600 text-sm"
              >
                ✓
              </button>
              <button
                class="px-3 py-1 bg-blue-500 text-white rounded hover:bg-blue-600 text-sm"
              >
                Edit
              </button>
              <button
                class="px-3 py-1 bg-red-500 text-white rounded hover:bg-red-600 text-sm"
              >
                Delete
              </button>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`Dashboard > renders empty dashboard correctly (snapshot) 1`] = `
<DocumentFragment>
  <div
    class="min-h-screen bg-gray-100"
  >
    <header
      class="bg-white shadow"
    >
      <div
        class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center"
      >
        <h1
          class="text-xl font-bold text-gray-800"
        >
          Family Todo App
        </h1>
        <div
          class="flex items-center gap-4"
        >
          <span
            class="text-gray-600"
          >
            Hello, Test User
          </span>
          <button
            class="px-3 py-1 text-sm text-gray-600 hover:text-gray-800"
          >
            Logout
          </button>
          <button
            class="px-3 py-1 text-sm bg-gray-100 text-gray-700 rounded border hover:bg-gray-200 transition-colors flex items-center gap-1"
            title="Refresh data"
          >
            🔄 Reload
          </button>
        </div>
      </div>
    </header>
    <main
      class="max-w-7xl mx-auto px-4 py-6"
    >
      <div
        class="mb-6 flex flex-wrap gap-6 items-center justify-between"
      >
        <div
          class="flex flex-wrap gap-6"
        >
          <div
            class="flex flex-col gap-2"
          >
            <span
              class="text-sm font-semibold text-gray-500 uppercase tracking-wider"
            >
              Status
            </span>
            <div
              class="flex gap-2"
            >
              <button
                class="px-3 py-1.5 text-sm rounded transition-colors bg-blue-600 text-white"
              >
                Open
              </button>
              <button
                class="px-3 py-1.5 text-sm rounded transition-colors bg-white text-gray-700 border hover:bg-gray-50"
              >
                Completed
              </button>
                              
              <button
                class="px-3 py-1.5 text-sm rounded transition-colors bg-white text-gray-700 border hover:bg-gray-50"
              >
                All
              </button>
            </div>
          </div>
          <div
            class="flex flex-col gap-2"
          >
            <span
              class="text-sm font-semibold text-gray-500 uppercase tracking-wider"
            >
              Assignee
            </span>
            <div
              class="flex gap-2"
            >
              <button
                class="px-3 py-1.5 text-sm rounded transition-colors bg-white text-gray-700 border hover:bg-gray-50"
              >
                My Tasks
              </button>
              <button
                class="px-3 py-1.5 text-sm rounded transition-colors bg-blue-600 text-white"
              >
                All Tasks
              </button>
            </div>
          </div>
        </div>
        <div
          class="flex gap-4 items-center"
        >
          <select
            class="px-3 py-2 border rounded bg-white text-sm"
          >
            <option
              value="createdAt"
            >
              Sort by Created
            </option>
            <option
              value="dueDate"
            >
              Sort by Due Date
            </option>
            <option
              value="title"
            >
              Sort by Title
            </option>
          </select>
          <button
            class="px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600 text-sm font-medium"
          >
            + New Task
          </button>
        </div>
      </div>
      <div
        class="text-center py-8 text-gray-500"
      >
        No tasks found
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`Dashboard > renders loading state initially 1`] = `
<DocumentFragment>
  <div
    class="min-h-screen flex items-center justify-center bg-gray-100"
  >
    <p
      class="text-gray-600"
    >
      Loading...
    </p>
  </div>
</DocumentFragment>
`;
